{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 63,
  "lineage": "f0e3ec47-5fd6-89d8-99bd-16903e2ab2c7",
  "resources": [
    {
      "module": "module.ec2_linux",
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "module.ec2_linux.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e3c4a339a264cc9",
            "arn": "arn:aws:ec2:us-east-1:211125395960:instance/i-06f17017dc9f95117",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06f17017dc9f95117",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08724c30cd72d3e9a",
            "private_dns": "ip-10-0-1-106.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.106",
            "public_dns": "ec2-34-205-19-65.compute-1.amazonaws.com",
            "public_ip": "34.205.19.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a3fee803bb9595b1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb54b85d0b421b4d",
            "tags": {
              "Name": "linux-ec2"
            },
            "tags_all": {
              "Name": "linux-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c1d77c1de9fef258"
            ]
          },
          "dependencies": [
            "module.ec2_linux.data.aws_ami.latest_amazon_linux",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.modules_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_ubuntu",
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "module.ec2_ubuntu.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09ce3a383d1a1e5a6",
            "arn": "arn:aws:ec2:us-east-1:211125395960:instance/i-0710d4f5494230452",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0710d4f5494230452",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b22895ffc185086b",
            "private_dns": "ip-10-0-1-53.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.53",
            "public_dns": "ec2-54-227-147-68.compute-1.amazonaws.com",
            "public_ip": "54.227.147.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c337ecfc8fa03a4e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb54b85d0b421b4d",
            "tags": {
              "Name": "ubuntu-ec2"
            },
            "tags_all": {
              "Name": "ubuntu-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c1d77c1de9fef258"
            ]
          },
          "dependencies": [
            "module.ec2_ubuntu.data.aws_ami.latest_ubuntu",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.modules_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-006806084821b2d70",
            "arn": "arn:aws:ec2:us-east-1:211125395960:elastic-ip/eipalloc-006806084821b2d70",
            "domain": "vpc",
            "id": "eipalloc-006806084821b2d70",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-22-237-122.compute-1.amazonaws.com",
            "public_ip": "52.22.237.122",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terrafom_NATGatewayEIP"
            },
            "tags_all": {
              "Name": "terrafom_NATGatewayEIP"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.modules_vpc_igw",
            "module.vpc.aws_vpc.modules_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "modules_vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:internet-gateway/igw-04ebf82cefd65b352",
            "id": "igw-04ebf82cefd65b352",
            "owner_id": "211125395960",
            "tags": {
              "Name": "development-vpc-igw"
            },
            "tags_all": {
              "Name": "development-vpc-igw"
            },
            "vpc_id": "vpc-040b9876406d70a76"
          },
          "dependencies": [
            "module.vpc.aws_vpc.modules_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "modules_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-006806084821b2d70",
            "association_id": "eipassoc-079ca116bf0722b73",
            "connectivity_type": "public",
            "id": "nat-0bc9617d73d412105",
            "network_interface_id": "eni-030c1194a5e468fb5",
            "private_ip": "10.0.1.226",
            "public_ip": "52.22.237.122",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bb54b85d0b421b4d",
            "tags": {
              "Name": "development-vpc-nat"
            },
            "tags_all": {
              "Name": "development-vpc-nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.modules_vpc_igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.modules_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:route-table/rtb-04425176814130456",
            "id": "rtb-04425176814130456",
            "owner_id": "211125395960",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bc9617d73d412105",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "development-vpc-private-route"
            },
            "tags_all": {
              "Name": "development-vpc-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-040b9876406d70a76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.modules_vpc_igw",
            "module.vpc.aws_nat_gateway.modules_vpc",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.modules_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:route-table/rtb-056307d0373aa6800",
            "id": "rtb-056307d0373aa6800",
            "owner_id": "211125395960",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04ebf82cefd65b352",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "development-vpc-public-route"
            },
            "tags_all": {
              "Name": "development-vpc-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-040b9876406d70a76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.modules_vpc_igw",
            "module.vpc.aws_vpc.modules_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e58e021b5500cd1",
            "route_table_id": "rtb-04425176814130456",
            "subnet_id": "subnet-03fa28656593a8568"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.modules_vpc_igw",
            "module.vpc.aws_nat_gateway.modules_vpc",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.modules_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5c3db9b60d6ae91",
            "route_table_id": "rtb-04425176814130456",
            "subnet_id": "subnet-03d26f9446e599369"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.modules_vpc_igw",
            "module.vpc.aws_nat_gateway.modules_vpc",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.modules_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e4d1bac5393c180",
            "route_table_id": "rtb-04425176814130456",
            "subnet_id": "subnet-037508afcf27f79a4"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.modules_vpc_igw",
            "module.vpc.aws_nat_gateway.modules_vpc",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.modules_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae3a64d63901d074",
            "route_table_id": "rtb-056307d0373aa6800",
            "subnet_id": "subnet-0bb54b85d0b421b4d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.modules_vpc_igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.modules_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e67cabc81ea2a566",
            "route_table_id": "rtb-056307d0373aa6800",
            "subnet_id": "subnet-01f4b1417d463f337"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.modules_vpc_igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.modules_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e40dda63859dd533",
            "route_table_id": "rtb-056307d0373aa6800",
            "subnet_id": "subnet-0312877f77cdc1309"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.modules_vpc_igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.modules_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:subnet/subnet-03fa28656593a8568",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fa28656593a8568",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125395960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 0"
            },
            "tags_all": {
              "Name": "Private Subnet 0"
            },
            "vpc_id": "vpc-040b9876406d70a76"
          },
          "dependencies": [
            "module.vpc.aws_vpc.modules_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:subnet/subnet-03d26f9446e599369",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d26f9446e599369",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125395960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-040b9876406d70a76"
          },
          "dependencies": [
            "module.vpc.aws_vpc.modules_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:subnet/subnet-037508afcf27f79a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037508afcf27f79a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125395960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-040b9876406d70a76"
          },
          "dependencies": [
            "module.vpc.aws_vpc.modules_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:subnet/subnet-0bb54b85d0b421b4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb54b85d0b421b4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125395960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 0"
            },
            "tags_all": {
              "Name": "Public Subnet 0"
            },
            "vpc_id": "vpc-040b9876406d70a76"
          },
          "dependencies": [
            "module.vpc.aws_vpc.modules_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:subnet/subnet-01f4b1417d463f337",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f4b1417d463f337",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125395960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-040b9876406d70a76"
          },
          "dependencies": [
            "module.vpc.aws_vpc.modules_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:subnet/subnet-0312877f77cdc1309",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0312877f77cdc1309",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125395960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-040b9876406d70a76"
          },
          "dependencies": [
            "module.vpc.aws_vpc.modules_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "modules_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:vpc/vpc-040b9876406d70a76",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02b6e8275f73797b5",
            "default_route_table_id": "rtb-05a5aebf1dc75aab0",
            "default_security_group_id": "sg-0c1d77c1de9fef258",
            "dhcp_options_id": "dopt-033ceba9ec21dcf28",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-040b9876406d70a76",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05a5aebf1dc75aab0",
            "owner_id": "211125395960",
            "tags": {
              "Name": "development-vpc"
            },
            "tags_all": {
              "Name": "development-vpc"
            }
          }
        }
      ]
    }
  ]
}